--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="caixa">
                  <nav> 
                 <img src="homem.jpg">
-                     <li><a class="botão"href="homendonorte.html">sobre o filme</li></a>
+                     <li><a class="botão"href="=oqueé.html">sobre o filme</li></a>
                      <li><a class="botão"href="curiosidadessobreofilme.html">curiosidades sobre o filme<li/></a>
                     <li><a class="botão"href="criticas do filme.html">criticas do filme<li/></a>
                </nav> 
