--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div class="caixa">
                  <nav> 
                 <img src="homem.jpg">
-                     <li><a class="botão"href="=oqueé.html">sobre o filme</li></a>
-                     <li><a class="botão"href="curiosidadessobreofilme.html">curiosidades sobre o filme<li/></a>
-                    <li><a class="botão"href="criticas do filme.html">criticas do filme<li/></a>
+                     <li><a class="botão"href="=oqueé.html">o que é meio ambiente e sustentabilidade</li></a>
+                     <li><a class="botão"href="meioambientenaescola.html">meio ambiente e sustentabilidade no ambiente escolar<li/></a>
+                    <li><a class="botão"href="trabalhocomambiente.html">como usar no ambiente de trabalho<li/></a>
                </nav> 
             </div>
         </header>
