--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset ="UTF-8">
-        <title>O HOMEM DO NORTE</title>
+        <title>meio ambiente e sustentabilidade</title>
         
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="index.css">
