--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <header>
             <div class="caixa">
                  <nav> 
-                <img src="homem.jpg">
+                <img src="download.jpeg">
                      <li><a class="botão"href="=oqueé.html">o que é meio ambiente e sustentabilidade</li></a>
                      <li><a class="botão"href="meioambientenaescola.html">meio ambiente e sustentabilidade no ambiente escolar<li/></a>
                     <li><a class="botão"href="trabalhocomambiente.html">como usar no ambiente de trabalho<li/></a>
