--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div class="caixa">
                  <nav> 
                 <img src="download.jpeg">
-                     <li><a class="botão"href="=oqueé.html">o que é meio ambiente e sustentabilidade</li></a>
-                     <li><a class="botão"href="meioambientenaescola.html">meio ambiente e sustentabilidade no ambiente escolar<li/></a>
-                    <li><a class="botão"href="sustra.html">A SUSTENTABILIDADE E O AMBIENTE DO TRABALHO<li/></a>
+                     <li><a class="botão"href="=oqueé.html">O QUE É MEIO AMBIENTE E SUSTENTABILIDADE</li></a>
+                     <li><a class="botão"href="meioambientenaescola.html">MEIO AMBIENTE E SUSTENTABILIDADE NO AMBIENTE ESCOLAR<li/></a>
+                     <li><a class="botão"href="sustra.html">A SUSTENTABILIDADE E O AMBIENTE DO TRABALHO<li/></a>
                </nav> 
             </div>
         </header>
